--- a/index.html
+++ b/index.html
@@ -481,12 +481,14 @@
             const video = document.getElementsByClassName('input_video')[0];
             const canvas = document.getElementById('camera-preview');
             const ctx = canvas.getContext('2d');
+	    canvas.width = 320; 
+   	    canvas.height = 240;
             
             const hands = new Hands({locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`});
             hands.setOptions({ maxNumHands: 2, modelComplexity: 1, minDetectionConfidence: 0.5, minTrackingConfidence: 0.5 });
 
             hands.onResults(results => {
-                ctx.clearRect(0,0,100,75); ctx.drawImage(results.image, 0, 0, 100, 75);
+                ctx.clearRect(0,0,320,240); ctx.drawImage(results.image, 0, 0, 320, 240);
 
                 // --- Hand Logic  ---
                 if (results.multiHandLandmarks.length === 2) {
